--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio for web developer and sorcerer Jon Dehlin.  Epstein didn't kill himself."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Gudea&family=Kanit:wght@500&family=Spartan&family=Tinos&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Jon Dehlin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
