--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Portfolio for web developer and sorcerer Jon Dehlin.  Epstein didn't kill himself."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Gudea&family=Kanit:wght@500&family=Spartan&family=Tinos&display=swap" rel="stylesheet">
     <title>Jon Dehlin</title>
   </head>
